Se mofico el Schema de la base de datos y ademas se empieza a ddar estilo a los item que deben ir en la dasboard

--- a/public/views/shopCart.html
+++ b/public/views/shopCart.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">categorias</a>
+        <img src="./../img/logoShoes.png" alt="Logo" style="width:140px;">>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,14 +26,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="board.html" target="_self">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="shopCart.html" target="_self">Link</a>
-                </li>
-                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn fas fa-cart-plus my-2 my-sm-0" type="submit"></button>
+                <a class="btn btn-primary my-2 my-sm-0" href="login.html" type="button">salir</a>
             </form>
         </div>
     </nav>
