--- a/public/views/board.html
+++ b/public/views/board.html
@@ -14,6 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="./../javascript/app.js"></script>
 </head>
 
 <body>
@@ -31,16 +32,105 @@
                     <a class="nav-link" href="board.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="shopCart.html" target="_self">Link</a>
+                    <a class="nav-link" href="shopCart.html" target="_self">Mis pedidos</a>
                 </li>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn fas fa-cart-plus my-2 my-sm-0" type="submit"></button>
+                <a class="btn btn-success fas fa-cart-plus my-2 my-sm-0" href="shopCart.html" type="button"></a>
             </form>
         </div>
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card-box">
+                    <div class="card-title">
+                        <img src="./../img/hombre/adidas.jpg" class="img-fluid" alt="Adidas">
+                        <h2>Adidas</h2>
+                        <p>Talla: 38</p>
+                        <p>Tipo: Hombre</p>
+                        <p>color: Blanco</p>
+                    </div>
+                    <div class="card-button">
+                        <a href="./shopCart.html" type="button" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-box">
+                    <div class="card-title">
+                        <img src="./../img/hombre/adidas2.jpg" class="img-fluid" alt="Adidas">
+                        <h2>Adidas</h2>
+                        <p>Talla: 38</p>
+                        <p>Tipo: Hombre</p>
+                        <p>color: Negro</p>
+                    </div>
+                    <div class="card-button">
+                        <a href="./shopCart.html" type="button" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-box">
+                    <div class="card-title">
+                        <img src="./../img/hombre/newbalance.jpg" class="img-fluid" alt="Adidas">
+                        <h2>Adidas</h2>
+                        <p>Talla: 38</p>
+                        <p>Tipo: Hombre</p>
+                        <p>color: Gris</p>
+                    </div>
+                    <div class="card-button">
+                        <a href="./shopCart.html" type="button" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-box">
+                    <div class="card-title">
+                        <img src="./../img/hombre/guayos.jpg" class="img-fluid" alt="Adidas">
+                        <h2>Adidas</h2>
+                        <p>Talla: 38</p>
+                        <p>Tipo: Hombre</p>
+                        <p>color: Verde</p>
+                    </div>
+                    <div class="card-button">
+                        <a href="./shopCart.html" type="button" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-box">
+                    <div class="card-title">
+                        <img src="./../img/hombre/nike.jpg" class="img-fluid" alt="Adidas">
+                        <h2>Adidas</h2>
+                        <p>Talla: 38</p>
+                        <p>Tipo: Hombre</p>
+                        <p>color: Gris</p>
+                    </div>
+                    <div class="card-button">
+                        <a href="./shopCart.html" type="button" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-box">
+                    <div class="card-title">
+                        <img src="./../img/hombre/nike2.jpg" class="img-fluid" alt="Adidas">
+                        <h2>Adidas</h2>
+                        <p>Talla: 38</p>
+                        <p>Tipo: Hombre</p>
+                        <p>color: Negro</p>
+                    </div>
+                    <div class="card-button">
+                        <a type="button" href="shopCart.html" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
